# QuickTransfer

./: CMakeLists.txt  DOC Document.docx  README.md  que.txt
.github/workflows/: ci.yml
docs/: 问题解答.md  项目讲解.md
docs/superpowers/plans/: 2026-06-11-lan-transfer.md  2026-06-11-phone-and-pairing.md  2026-06-13-qr-shutdown-device-type.md  2026-06-14-tls-encryption.md
docs/superpowers/specs/: 2026-06-10-lan-transfer-design.md  2026-06-11-macos-ci-design.md  2026-06-11-phone-and-pairing-design.md  2026-06-12-qr-shutdown-device-type-design.md  2026-06-14-tls-encryption-design.md
src/: auth.cpp  auth.h  config.cpp  config.h  discovery.cpp  discovery.h  events.cpp  events.h  history.cpp  history.h  main.cpp  runstate.cpp  runstate.h  server.cpp  server.h  server_auth.cpp  util.cpp  util.h
tests/: test_auth.cpp  test_config.cpp  test_discovery.cpp  test_events.cpp  test_history.cpp  test_main.cpp  test_runstate.cpp  test_util.cpp
web/: app.js  index.html  style.css
